[gd_scene load_steps=12 format=3 uid="uid://dqmcvsnry04re"]

[ext_resource type="PackedScene" uid="uid://bkx8cgllgvkhp" path="res://crow/crow.tscn" id="1_jjwji"]
[ext_resource type="Script" path="res://house/house.gd" id="1_n7toq"]
[ext_resource type="PackedScene" uid="uid://dbkgo1yd7gu76" path="res://house/house_outer.tscn" id="2_6cw0y"]
[ext_resource type="PackedScene" uid="uid://d3qxr4go3snc4" path="res://house/house_inner.tscn" id="3_pf0c7"]
[ext_resource type="PackedScene" uid="uid://8t0qjbpllrgh" path="res://house/necklace.tscn" id="5_nd0mm"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_r4glj"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ku6x3"]
normal = Vector2(-1, 0)
distance = -820.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_61ved"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3462e"]
distance = -360.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bpy8"]
size = Vector2(604, 360)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0h6be"]
size = Vector2(220, 360)

[node name="House" type="Node2D"]
script = ExtResource("1_n7toq")

[node name="Boundaries" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/LeftWall"]
position = Vector2(0, 175)
shape = SubResource("WorldBoundaryShape2D_r4glj")

[node name="RightWall" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RightWall"]
position = Vector2(0, 175)
shape = SubResource("WorldBoundaryShape2D_ku6x3")

[node name="Ceiling" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Ceiling"]
position = Vector2(320, 0)
shape = SubResource("WorldBoundaryShape2D_61ved")

[node name="Floor" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Floor"]
position = Vector2(320, 0)
shape = SubResource("WorldBoundaryShape2D_3462e")

[node name="Crow" parent="." instance=ExtResource("1_jjwji")]
position = Vector2(55, 94)

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2(320, 180)

[node name="HouseOuter" parent="." instance=ExtResource("2_6cw0y")]

[node name="OuterRoomArea" type="Area2D" parent="HouseOuter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseOuter/OuterRoomArea"]
position = Vector2(300, 180)
shape = SubResource("RectangleShape2D_6bpy8")

[node name="HouseInner" parent="." instance=ExtResource("3_pf0c7")]
position = Vector2(186, 0)

[node name="InnerRoomArea" type="Area2D" parent="HouseInner"]
position = Vector2(-186, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseInner/InnerRoomArea"]
position = Vector2(712, 180)
shape = SubResource("RectangleShape2D_0h6be")

[node name="Necklace" parent="." instance=ExtResource("5_nd0mm")]
position = Vector2(641, 186)

[connection signal="body_entered" from="HouseOuter/OuterRoomArea" to="." method="_on_outer_room_area_entered"]
[connection signal="body_entered" from="HouseInner/InnerRoomArea" to="." method="_on_inner_room_area_entered"]
[connection signal="dropped" from="Necklace" to="." method="_on_necklace_dropped"]
[connection signal="picked_up" from="Necklace" to="." method="_on_necklace_picked_up"]
